# photon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  photon.example.toml  process-compose.yaml
.github/workflows/: agent-release.yml  ci.yml  docker-release.yml
crates/photon-agent/: Cargo.toml
crates/photon-agent/src/: config.rs  gpu.rs  main.rs  otlp.rs  sample.rs  send.rs  sysinfo_sampler.rs
crates/photon-alerts/: Cargo.toml
crates/photon-alerts/src/: format.rs  lib.rs  model.rs  notify.rs  scheduler.rs  source.rs  state.rs
crates/photon-alerts/src/store/: mem.rs  mod.rs  sqlite.rs
crates/photon-api/: Cargo.toml
crates/photon-api/src/: alerts.rs  assets.rs  auth.rs  data.rs  facet.rs  fields.rs  histogram.rs  infra.rs  lib.rs  metrics.rs  query_params.rs  red.rs  rum.rs  rum_apps.rs  search.rs  services.rs  settings.rs  stream.rs  traces.rs  traces_agg.rs  traces_search.rs  uptime.rs  usage.rs  users.rs
crates/photon-compact/: Cargo.toml
crates/photon-compact/src/: compactor.rs  lib.rs  metrics_compactor.rs  span_compactor.rs  stream.rs
crates/photon-compact/tests/: metrics_pipeline.rs  spans_pipeline.rs
crates/photon-core/: Cargo.toml
crates/photon-core/src/: config.rs  default.toml  ingest_counters.rs  lib.rs  manifest.rs  metric_agg.rs  metric_record.rs  metric_schema.rs  record.rs  retention.rs  rum.rs  schema.rs  segment.rs  span_record.rs  span_schema.rs
crates/photon-index/: Cargo.toml
crates/photon-index/src/: bloom.rs  lib.rs  skip_index.rs  tokenize.rs
crates/photon-ingest/: Cargo.toml
crates/photon-ingest/benches/: fixture.rs  logs_ingest.rs
crates/photon-ingest/src/: auth.rs  grpc.rs  grpc_metrics.rs  grpc_trace.rs  http.rs  lib.rs  mapping.rs  metrics_http.rs  metrics_mapping.rs  otlp_value.rs  promrw_http.rs  promrw_mapping.rs  promrw_proto.rs  trace_http.rs  trace_mapping.rs
crates/photon-ingest/tests/: alloc_guard.rs  alloc_guard_metrics.rs  alloc_guard_traces.rs
crates/photon-loadgen/: Cargo.toml
crates/photon-loadgen/src/: config.rs  driver.rs  lib.rs  logs.rs  main.rs  metrics.rs  payload.rs  ratelimit.rs  stats.rs  traces.rs  worker.rs
crates/photon-loadgen/tests/: smoke.rs
crates/photon-query/: Cargo.toml
crates/photon-query/src/: bucket_math.rs  count.rs  facet.rs  fields.rs  histogram.rs  infra.rs  lib.rs  metric_catalog.rs  metric_classic_hist.rs  metric_dist.rs  metric_engine.rs  metric_predicate.rs  metric_query.rs  predicate.rs  red.rs  red_timeseries.rs  rum_errors.rs  rum_vitals.rs  service_dependencies.rs  span_engine.rs  span_facet.rs  span_fields.rs  span_histogram.rs  span_latency.rs  span_predicate.rs  span_search.rs  trace_list.rs
crates/photon-query/tests/: grammar_consistency.rs  metric_grammar_consistency.rs  metric_query.rs  red.rs  search.rs  span_grammar_consistency.rs  trace.rs  trace_search.rs
crates/photon-server/: Cargo.toml
crates/photon-server/src/: alerts_source.rs  lib.rs  main.rs  uptime_bridge.rs
crates/photon-server/tests/: alerts_e2e.rs  e2e.rs  infra_e2e.rs  rum_e2e.rs
crates/photon-storage/: Cargo.toml
crates/photon-storage/src/: lib.rs  replicator.rs  storage.rs
crates/photon-uptime/: Cargo.toml
crates/photon-uptime/src/: lib.rs  model.rs  notify.rs  probe.rs  scheduler.rs  state.rs
crates/photon-uptime/src/store/: mod.rs  sqlite.rs
crates/photon-uptime/tests/: sqlite_store.rs
crates/photon-wal/: Cargo.toml
crates/photon-wal/benches/: append.rs
crates/photon-wal/src/: broadcast.rs  disk.rs  frame.rs  lib.rs
crates/photon-wal/tests/: wal.rs
deploy/: README.md  garage.toml
docs/: README.md  architecture.md  conventions.md  frontend.md
docs/perf-audit/: 01-write-path-wal-ingest.md  02-logs-query-and-index.md  03-traces-metrics-query.md  04-compaction-storage.md  05-core-domain.md  06-api-server.md  07-uptime-loadgen.md
docs/perf-audit/benchmarks/: b2-results.md  b2-targets.md  concurrency-sweep.md  logs-baseline.md  memory-profile.md  parallelism-diagnostic.md
docs/subsystems/: alerts.md  auth.md  data.md  infra.md  logs.md  metrics.md  rum.md  services-apm.md  traces.md  uptime.md
docs/superpowers/plans/: 2026-07-18-alert-rule-templates.md  2026-07-18-webhook-alert-notifications.md  2026-07-21-infra-host-detail-v2.md
docs/superpowers/specs/: 2026-07-18-alert-rule-templates-design.md  2026-07-18-webhook-alert-notifications-design.md  2026-07-21-infra-host-detail-v2-design.md
frontend/: components.json  env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/lib/: alertTemplates.test.ts  alertTemplates.ts  alertsQueries.test.ts  alertsQueries.ts
frontend/src/router/: home.test.ts  index.js  index.test.js
frontend/src/styles/: base.css  tokens.css
frontend/src/views/: AlertsView.vue  DataView.test.js  DataView.vue  HomeView.test.ts  HomeView.vue  InfraHostDetailView.vue  InfraHostsView.test.ts  InfraHostsView.vue  LoginView.vue  LogsView.test.js  LogsView.vue  MetricsExplorer.test.js  MetricsExplorer.vue  OnboardingView.vue  RumAppsView.test.ts  RumAppsView.vue  RumErrorDetailView.test.ts  RumErrorDetailView.vue  RumErrorsView.test.ts  RumErrorsView.vue  RumPageDetailView.test.ts  RumPageDetailView.vue  RumPagesView.test.ts  RumPagesView.vue  RumVitalsView.test.js  RumVitalsView.vue  ServiceDetailView.test.ts  ServiceDetailView.vue  ServicesListView.test.ts  ServicesListView.vue  TraceDetailView.test.js  TraceDetailView.vue  TracesExplorer.test.js  TracesExplorer.vue  UptimeDashboard.vue
scripts/: bench-ingest.sh  bench-sweep.sh  install-process-compose.sh  mem-profile.sh
sdk/rum/: README.md  package.json  tsconfig.json  tsup.config.ts
sdk/rum/scripts/: size-check.mjs
sdk/rum/src/: attribution.ts  beacon.ts  context.ts  errors.ts  index.ts  session.ts  spa.ts  trace.ts  traceState.ts  tracing.ts  view.ts
sdk/rum/test/: beacon.test.ts  errors.test.ts  index.test.ts  session.test.ts  spa.test.ts  trace.test.ts  tracing.test.ts  view.test.ts
(+389 files in other folders)
