[package]
name = "photon-alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
photon-core = { path = "../photon-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
