[package]
name = "photon-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
photon-core = { path = "../photon-core" }
# `aws` feature enables `object_store::aws::AmazonS3`, required by the durable-store
# contract (see docs/superpowers/plans/2026-07-01-photon-interface-contracts.md). Not
# enabled by the workspace default `object_store = "0.11"` dependency.
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
