[package]
name = "photon-uptime"
version = "0.1.0"
edition = "2021"

[dependencies]
photon-core = { path = "../photon-core" }
async-trait = { workspace = true }
# "net" on top of the workspace tokio features: TcpStream/TcpListener/lookup_host for the TCP prober.
tokio = { workspace = true, features = ["net"] }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
surge-ping = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }
